tests/fixtures/invalid/pow_set_none_str.py
# Cannot call pow() with Set[int], None, Str
x = pow({1, 2, 3}, None, "hello")
